tests/NormalTests/paczka1/small_fuzzy/85502862.err
Error in line 3: LyWtpmDi A798 86,9
Error in line 5: LyWtpmDi A476 87,5
